correcting dark mode

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-root {
+* root {
     --menu-height: 300pt;
     --background-color: RGB(240, 250, 250);
 }
